# tax-calculator-api

./: .env  .gitignore  CONTRIBUTING.md  README.md  Taskfile.yml  docker-compose.yml
src/: Dockerfile  gunicorn_logging.ini  pyproject.toml
src/app/: env.py  logging.py  main.py
src/app/routes/tax_calculator/: controllers.py  models.py  routes.py
src/tests/unit/: test_tax_calculator.py
