[tool.poetry]
name = "tax-calculator"
version = "1.0.0"
description = "API to calculate the total income tax for a given year"
authors = ["John Andrews <johnandrews@macvanderlay.lan>"]
license = "MIT"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
gunicorn = "^22.0.0"


[tool.poetry.group.dev.dependencies]
robotframework = "^7.0"
robotframework-requests = "^0.9.7"
robotframework-httplibrary = "^0.4.2"
pytest = "^8.2.0"
coverage = "^7.5.1"
pytest-asyncio = "^0.23.6"
mock = "^5.1.0"
pytest-httpx = "^0.30.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
